# crawler

./: Cargo.toml  README.md  ideas.md  justfile
.github/workflows/: ci.yml
benches/: bloom.rs  simhash.rs
docs/: progress.md
src/: bloom.rs  crawler.rs  fetch.rs  lib.rs  main.rs  sieve.rs  simhash.rs  url_utils.rs  worker.rs
src/dispatcher/: domain_map.rs  domain_priority_queue.rs  mod.rs
src/sieve/: bloom.rs  mod.rs
src/worker/: fetch.rs  mod.rs  simhash.rs
