[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
html5ever = "0.26"
fastmurmur3 = "0.2.0"
regex = "1.10.3"
