[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
html5ever = "0.26"
fastmurmur3 = "0.2.0"
regex = "1.10.3"
log = "0.4.21"
env_logger = "0.11.2"
url = "2.5.0"

# benchmarks

[dev-dependencies]
criterion = { version = "0.5.1" }
rand = "0.8.5"

[[bench]]
name = "bloom"
harness = false

[[bench]]
name = "simhash"
harness = false
